c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/label_token.c
int main(void) {
    goto _foo_1_;  // a label may include numbers and underscores
    return 0;
_foo_1_:
    return 1;
}