c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/extra_credit/goto_missing_label.c
int main(void) {
    goto label;
    return 0;
}